data/derived/fa15/progs/unify/prog1114.ml.out
Characters 87-89:
  | (x,y) :: ly -> if k = x then y else ly;;
                                        ^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type 'b
       The type variable 'b occurs inside ('a * 'b) list
